Do not run Clippy for `1.42.0`

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,6 +82,7 @@ jobs:
         with:
           command: clippy
           args: --workspace --all-targets -- -D warnings
+        if: startsWith(matrix.toolchain, 'stable')
 
       - name: cargo-build (.)
         uses: actions-rs/cargo@v1
