--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,14 +103,14 @@ jobs:
         with:
           command: clippy
           args: --manifest-path ./ui-tests/Cargo.toml --all-targets -- -D warnings
-        if: startsWith(matrix.toolchain, 'stable')
+        if: matrix.toolchain == 'stable-x86_64-apple-darwin' || matrix.toolchain == 'stable-x86_64-unknown-linux-gnu'
 
       - name: cargo-build (./ui-tests)
         uses: actions-rs/cargo@v1
         with:
           command: build
           args: --manifest-path ./ui-tests/Cargo.toml
-        if: startsWith(matrix.toolchain, 'stable')
+        if: matrix.toolchain == 'stable-x86_64-apple-darwin' || matrix.toolchain == 'stable-x86_64-unknown-linux-gnu'
 
       - name: cargo-test (./ui-tests)
         uses: actions-rs/cargo@v1
@@ -119,7 +119,7 @@ jobs:
           args: --manifest-path ./ui-tests/Cargo.toml --no-fail-fast
         env:
           RUST_BACKTRACE: full
-        if: startsWith(matrix.toolchain, 'stable')
+        if: matrix.toolchain == 'stable-x86_64-apple-darwin' || matrix.toolchain == 'stable-x86_64-unknown-linux-gnu'
 
   gh-release:
     name: GH Release
