--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ publish = false
 atcoder-abc188-a = { problem = "https://atcoder.jp/contests/abc188/tasks/abc188_a" }
 
 [dependencies]
-mic_impl = { path = "./mic_impl" }
+mic_impl = { version = "0.1.0", path = "./mic_impl" }
 
 [dev-dependencies]
 either = "=1.5.3"
